welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: illegal start of simple pattern
      case if (day==1) => return "10:00"
           ^alarmClock:5: error: '=>' expected but ';' found.
      case if (day==2) => return "10:00"
^alarmClock:5: error: illegal start of simple pattern
      case if (day==2) => return "10:00"
           ^alarmClock:6: error: '=>' expected but ';' found.
      case if (day==3) => return "10:00"
^alarmClock:6: error: illegal start of simple pattern
      case if (day==3) => return "10:00"
           ^alarmClock:7: error: '=>' expected but ';' found.
      case if (day==4) => return "10:00"
^alarmClock:7: error: illegal start of simple pattern
      case if (day==4) => return "10:00"
           ^alarmClock:8: error: '=>' expected but ';' found.
      case if (day==5) => return "10:00"
^alarmClock:8: error: illegal start of simple pattern
      case if (day==5) => return "10:00"
           ^alarmClock:9: error: '=>' expected but ';' found.
      case if (day==6) => return "off"
^alarmClock:9: error: illegal start of simple pattern
      case if (day==6) => return "off"
           ^alarmClock:10: error: '=>' expected but ';' found.
      case if (day==0) => return "off"
^alarmClock:10: error: illegal start of simple pattern
      case if (day==0) => return "off"
           ^alarmClock:11: error: '=>' expected but '}' found.
     }
     ^alarmClock:13: error: illegal start of simple pattern
      case if (day==1) => return "7:00"
           ^alarmClock:14: error: '=>' expected but ';' found.
      case if (day==2) => return "7:00"
^alarmClock:14: error: illegal start of simple pattern
      case if (day==2) => return "7:00"
           ^alarmClock:15: error: '=>' expected but ';' found.
      case if (day==3) => return "7:00"
^alarmClock:15: error: illegal start of simple pattern
      case if (day==3) => return "7:00"
           ^alarmClock:16: error: '=>' expected but ';' found.
      case if (day==4) => return "7:00"
^alarmClock:16: error: illegal start of simple pattern
      case if (day==4) => return "7:00"
           ^alarmClock:17: error: '=>' expected but ';' found.
      case if (day==5) => return "7:00"
^alarmClock:17: error: illegal start of simple pattern
      case if (day==5) => return "7:00"
           ^alarmClock:18: error: '=>' expected but ';' found.
      case if (day==6) => return "10:00"
^alarmClock:18: error: illegal start of simple pattern
      case if (day==6) => return "10:00"
           ^alarmClock:19: error: '=>' expected but ';' found.
      case if (day==0) => return "10:00"
^alarmClock:19: error: illegal start of simple pattern
      case if (day==0) => return "10:00"
           ^alarmClock:20: error: '=>' expected but '}' found.
  }}
  ^