welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (vacation==true){
    day match{
      case if (day==1) => return "10:00"
      case if (day==2) => return "10:00"
      case if (day==3) => return "10:00"
      case if (day==4) => return "10:00"
      case if (day==5) => return "10:00"
      case if (day==6) => return "off"
      case if (day==0) => return "off"
     }
  } else {day match {
      case if (day==1) => return "7:00"
      case if (day==2) => return "7:00"
      case if (day==3) => return "7:00"
      case if (day==4) => return "7:00"
      case if (day==5) => return "7:00"
      case if (day==6) => return "10:00"
      case if (day==0) => return "10:00"
  }}
  }